--- a/public/style.css
+++ b/public/style.css
@@ -196,10 +196,39 @@ a {
   border: 1px solid black;
   width: 50vw;
   height: 40vw;
+  z-index: -1;
 }
 
 .toolbar {
   display: flex;
   align-items: center;
   margin-top: 1rem;
+}
+
+.output {
+  position: fixed;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  height: 50%;
+  width: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid #ccc;
+  background: #fff;
+  overflow: auto;
+  border-radius: 4px;
+  outline: none;
+  padding: 10px;
+}
+
+.output h3 {
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75);
 }
