--- a/public/style.css
+++ b/public/style.css
@@ -221,9 +221,6 @@ a {
   padding: 10px;
 }
 
-.output h3 {
-}
-
 .overlay {
   position: fixed;
   top: 0;
@@ -231,4 +228,27 @@ a {
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.75);
+}
+
+.output .modal-title {
+  text-align: center;
+}
+
+.result {
+  border: 1px solid black;
+  border-radius: 4px;
+  height: 75%;
+  width: 90%;
+  margin: 5%;
+  background-color: lightgray;
+  text-align: left;
+  font-weight: 900;
+}
+
+.exit-modal {
+  border-radius: 4px;
+  border: none;
+  background-color: #ea2028;
+  padding: 1%;
+  color: #ffffff;
 }
